plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'com.google.cloud.tools.jib' version '3.1.4'
}

ext {
    serverEnv = System.getProperty('server.env', 'dev')
    springBootVersion = '3.3.1'
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'com.google.cloud.tools.jib'

    group = 'com.talkkit'
    version = "0.0.1-SNAPSHOT"

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    repositories {
        mavenCentral()
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

subprojects {
    dependencies {
        //lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly("org.projectlombok:lombok")
        testAnnotationProcessor("org.projectlombok:lombok")

        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-jdbc'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }
}
project(':eureka') {
    def dockerRepository = System.getenv('DOCKER_REPOSITORY')
    def dockerImage = System.getenv('DOCKER_IMAGE_EUREKA')
    def serverEnv = System.getenv('SERVER_ENV')
    def mainClass = System.getenv('MAIN_CLASS_EUREKA')
    def containerPort = System.getenv('CONTAINER_PORT_EUREKA')

    if (serverEnv == 'dev') {
        jib {
            from {
                image = 'openjdk:17'
            }
            to {
                image = "${dockerRepository}/${dockerImage}"
                tags = ['3.0']
            }
            container {
                mainClass = mainClass
                jvmFlags = ['-Dspring.profiles.active=dev', '-Dfile.encoding=UTF-8']
                ports = [containerPort]
                allowInsecureRegistries = true
            }
        }
    }

    dependencies {

    }
}
project(':api-gateway') {
    def dockerRepository = System.getenv('DOCKER_REPOSITORY')
    def dockerImage = System.getenv('DOCKER_IMAGE_GATEWAY')
    def serverEnv = System.getenv('SERVER_ENV')
    def mainClass = System.getenv('MAIN_CLASS_GATEWAY')
    def containerPort = System.getenv('CONTAINER_PORT_GATEWAY')

    if (serverEnv == 'dev') {
        jib {
            from {
                image = 'openjdk:17'
            }
            to {
                image = "${dockerRepository}/${dockerImage}"
                tags = ['4.0']
            }
            container {
                mainClass = mainClass
                jvmFlags = ['-Dspring.profiles.active=dev', '-Dfile.encoding=UTF-8']
                ports = [containerPort]
                allowInsecureRegistries = true
            }
        }
    }
    dependencies {

        implementation 'org.springframework.cloud:spring-cloud-starter-gateway'

    }
}
project(':user-service') {
    def dockerRepository = System.getenv('DOCKER_REPOSITORY')
    def dockerImage = System.getenv('DOCKER_IMAGE_USER')
    def serverEnv = System.getenv('SERVER_ENV')
    def mainClass = System.getenv('MAIN_CLASS_USER')
    def containerPort = System.getenv('CONTAINER_PORT_USER')
//    def imageTag = System.getenv('IMAGE_TAG')

    if (serverEnv == 'dev') {
        jib {
            from {
                image = 'openjdk:17'
            }
            to {
                image = "${dockerRepository}/${dockerImage}"
                tags = ['4.0']
            }
            container {
                mainClass = mainClass
                jvmFlags = ['-Dspring.profiles.active=dev', '-Dfile.encoding=UTF-8']
                ports = [containerPort]
                allowInsecureRegistries = true
            }
        }
    }

    dependencies {
        implementation(project(":canal-domain"))
        implementation(project(":canal-helper"))
    }
}
project(':project-service') {
    def dockerRepository = System.getenv('DOCKER_REPOSITORY')
    def dockerImage = System.getenv('DOCKER_IMAGE_PROJECT')
    def serverEnv = System.getenv('SERVER_ENV')
    def mainClass = System.getenv('MAIN_CLASS_PROJECT')
    def containerPort = System.getenv('CONTAINER_PORT_PROJECT')
    def imageTag = System.getenv('IMAGE_TAG')

    if (serverEnv == 'dev') {
        jib {
            from {
                image = 'openjdk:17'
            }
            to {
                image = "${dockerRepository}/${dockerImage}"
                tags = [imageTag]
            }
            container {
                mainClass = mainClass
                jvmFlags = ['-Dspring.profiles.active=dev', '-Dfile.encoding=UTF-8']
                ports = [containerPort]
                allowInsecureRegistries = true
            }
        }
    }

    dependencies {
        implementation(project(":canal-domain"))
        implementation(project(":canal-helper"))
    }
}
project(':community-service') {
    def dockerRepository = System.getenv('DOCKER_REPOSITORY')
    def dockerImage = System.getenv('DOCKER_IMAGE_COMMUNITY')
    def serverEnv = System.getenv('SERVER_ENV')
    def mainClass = System.getenv('MAIN_CLASS_COMMUNITY')
    def containerPort = System.getenv('CONTAINER_PORT_COMMUNITY')
    def imageTag = System.getenv('IMAGE_TAG')

    if (serverEnv == 'dev') {
        jib {
            from {
                image = 'openjdk:17'
            }
            to {
                image = "${dockerRepository}/${dockerImage}"
                tags = [imageTag]
            }
            container {
                mainClass = mainClass
                jvmFlags = ['-Dspring.profiles.active=dev', '-Dfile.encoding=UTF-8']
                ports = [containerPort]
                allowInsecureRegistries = true
            }
        }
    }

    dependencies {
        implementation(project(":canal-domain"))
        implementation(project(":canal-helper"))
    }
}
project(':script-service') {
    def dockerRepository = System.getenv('DOCKER_REPOSITORY')
    def dockerImage = System.getenv('DOCKER_IMAGE_SCRIPT')
    def serverEnv = System.getenv('SERVER_ENV')
    def mainClass = System.getenv('MAIN_CLASS_SCRIPT')
    def containerPort = System.getenv('CONTAINER_PORT_SCRIPT')
    def imageTag = System.getenv('IMAGE_TAG')

    if (serverEnv == 'dev') {
        jib {
            from {
                image = 'openjdk:17'
            }
            to {
                image = "${dockerRepository}/${dockerImage}"
                tags = [imageTag]
            }
            container {
                mainClass = mainClass
                jvmFlags = ['-Dspring.profiles.active=dev', '-Dfile.encoding=UTF-8']
                ports = [containerPort]
                allowInsecureRegistries = true
            }
        }
    }

    dependencies {
        implementation(project(":canal-domain"))
        implementation(project(":canal-helper"))
    }
}

project(':practice-service') {
    def dockerRepository = System.getenv('DOCKER_REPOSITORY')
    def dockerImage = System.getenv('DOCKER_IMAGE_PRACTICE')
    def serverEnv = System.getenv('SERVER_ENV')
    def mainClass = System.getenv('MAIN_CLASS_PRACTICE')
    def containerPort = System.getenv('CONTAINER_PORT_PRACTICE')
    def imageTag = System.getenv('IMAGE_TAG')

    if (serverEnv == 'dev') {
        jib {
            from {
                image = 'openjdk:17'
            }
            to {
                image = "${dockerRepository}/${dockerImage}"
                tags = [imageTag]
            }
            container {
                mainClass = mainClass
                jvmFlags = ['-Dspring.profiles.active=dev', '-Dfile.encoding=UTF-8']
                ports = [containerPort]
                allowInsecureRegistries = true
            }
        }
    }

    dependencies {
        implementation(project(":canal-domain"))
        implementation(project(":canal-helper"))
    }
}

project(':canal-domain') {
    dependencies {
        implementation(project(':canal-helper'))
    }
    bootJar { enabled = false }
    jar { enabled = true }
}

project(':canal-helper') {
    dependencies {
    }
}


tasks {
    copy {
        from("./talk-kit-secret/k8s")
        include("k8s*.yml")
        include("*kubeconfig.yml")
        include("argocd*.yml")
        into("./k8s")
    }
    copy {
        from("./talk-kit-secret/eureka/server")
        include("application*.yml")
        into("eureka/src/main/resources")
    }
    copy {
        from("./talk-kit-secret/eureka/gateway")
        include("application*.yml")
        into("api-gateway/src/main/resources")
    }
    copy {
        from("./talk-kit-secret/eureka/client/user")
        include("application*.yml")
        into("user-service/src/main/resources")
    }
    copy {
        from("./talk-kit-secret/eureka/client/project")
        include("application*.yml")
        into("project-service/src/main/resources")
    }
    copy {
        from("./talk-kit-secret/eureka/client/community")
        include("application*.yml")
        into("community-service/src/main/resources")
    }
    copy {
        from("./talk-kit-secret/eureka/client/script")
        include("application*.yml")
        into("script-service/src/main/resources")
    }
    copy {
        from("./talk-kit-secret/eureka/client/practice")
        include("application*.yml")
        into("practice-service/src/main/resources")
    }
    copy {
        from("./talk-kit-secret/eureka/client/core")
        include("application*.yml")
        into("canal-domain/src/main/resources")
    }

}
